<resources>
    <string name="app_name">Padel Tournament Manager</string>
    <string name="tournaments">Tournaments</string>
    <string name="players">Players</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="add_player">Add Player</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="select_players">Select Players</string>
    <string name="tournament_type">Tournament Type</string>
    <string name="round_robin">Round Robin</string>
    <string name="knockout">Knockout</string>
    <string name="group_stage">Group Stage + Knockout</string>
    <string name="player_name">Player Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="matches">Matches</string>
    <string name="results">Results</string>
    <string name="winner">Winner</string>
    <string name="score">Score</string>
</resources>